--- a/MovieQuotes/Base.lproj/Main.storyboard
+++ b/MovieQuotes/Base.lproj/Main.storyboard
@@ -102,24 +102,53 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="y6z-JH-hqj">
+                                <rect key="frame" x="194" y="581" width="200" height="261"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created by:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5FC-Fq-QwK">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bsX-52-77h">
+                                        <rect key="frame" x="0.0" y="30.5" width="200" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="LUE-gf-S6t"/>
+                                            <constraint firstAttribute="height" constant="200" id="fr6-tX-d28"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="unknown" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l3H-oK-9Nt">
+                                        <rect key="frame" x="0.0" y="240.5" width="200" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="nf9-pe-WIh"/>
                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                         <constraints>
                             <constraint firstItem="msX-Fe-uI3" firstAttribute="leading" secondItem="nf9-pe-WIh" secondAttribute="leading" constant="20" id="RWd-gh-bcZ"/>
                             <constraint firstItem="msX-Fe-uI3" firstAttribute="top" secondItem="nf9-pe-WIh" secondAttribute="top" constant="36" id="Ts7-Kc-wH5"/>
+                            <constraint firstItem="nf9-pe-WIh" firstAttribute="trailing" secondItem="y6z-JH-hqj" secondAttribute="trailing" constant="20" id="fgB-s8-iPk"/>
                             <constraint firstItem="nf9-pe-WIh" firstAttribute="trailing" secondItem="msX-Fe-uI3" secondAttribute="trailing" constant="20" id="roP-wJ-4ZS"/>
+                            <constraint firstItem="nf9-pe-WIh" firstAttribute="bottom" secondItem="y6z-JH-hqj" secondAttribute="bottom" constant="20" id="ztL-DU-Z8w"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="CWF-Z4-syw"/>
                     <connections>
+                        <outlet property="authorBox" destination="y6z-JH-hqj" id="rM4-vW-uKq"/>
+                        <outlet property="authorNameLabel" destination="l3H-oK-9Nt" id="JVv-3R-Ath"/>
+                        <outlet property="authorProfilePhotoImageFiew" destination="bsX-52-77h" id="h68-LT-bio"/>
                         <outlet property="movieLabel" destination="BGJ-gh-GBC" id="gBU-kq-yGd"/>
                         <outlet property="quoteLabel" destination="tdj-lU-qAT" id="JsR-gt-ual"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="brB-x9-MYz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2145" y="279"/>
+            <point key="canvasLocation" x="2143.4782608695655" y="278.57142857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Z6i-P2-puF">
